fix:scroll bar on mobile devices

--- a/Delivery-frontend/src/components/DashboardCard/index.module.css
+++ b/Delivery-frontend/src/components/DashboardCard/index.module.css
@@ -1,18 +1,18 @@
 .Body{
   background-color: #ecf0f1;
   height: 100vh;
-  padding: 1.1rem;
+  padding: 2rem;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   gap: 8px;
   flex-shrink: 0;
-  overflow: scroll;
 }
 
 .BodyContainer{
   width: 100%;
   align-self: stretch;
+  padding: 1.1rem;
 }
 
 .MapContainer{
@@ -29,3 +29,9 @@
   gap: 10px;
   align-self: stretch;
 }
+
+@media (max-width: 575.98px) {
+    .Body {
+      overflow: scroll;
+    }
+  }
